# turn-off-the-light

./: readme.md
esp32c3/: CMakeLists.txt
esp32c3/include/: light_controller.h  pir.h  servo.h  sound.h  time_mgr.h
esp32c3/main/: CMakeLists.txt  light_controller.c  main.c  pir.c  servo.c  sound.c  time_mgr.c
test_mic/: CMakeLists.txt
test_mic/main/: main.c
test_pir/: CMakeLists.txt
test_pir/main/: main.c
test_servo/: CMakeLists.txt
test_servo/main/: main.c
