idf_component_register(SRCS "main.c"
                               "light_controller.c"
                               "servo.c"
                               "pir.c"
                               "sound.c"
                               "time_mgr.c"
                       INCLUDE_DIRS "../include")